# iidx_btools_subscreen

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: release.yml  windowx-x86-build.yml
assets/: FontEmbed.cmake  assets.rc  resource_def.h
include/: aic.hpp  api.hpp  globals.hpp  resources.hpp  style.hpp  textures.hpp  utils.hpp  widgets.hpp
include/bemanitools/: eamio.h  vefxio.h
src/: aic.cpp  api.cpp  assets.hpp  backend.cpp  backend.cpp.bak  defer.hpp  eamio.cpp  exceptions.hpp  globals.hpp  main.cpp  resources.cpp  resources.hpp  style.hpp  textures.cpp  textures.hpp  touch.cpp  touch.hpp  utils.cpp  vefxio.cpp  widgets.cpp  widgets.hpp  window.cpp  window.hpp
src/bemanitools/: eamio.h  glue.h  vefxio.h
src/io/: aic.cpp  aic.hpp  api.cpp  api.hpp  eamio.cpp  vefxio.cpp
src/utils/: hook.cpp  memory.cpp  memory.hpp  modules.cpp  modules.hpp  utils.cpp  widgets.cpp
src/widgets/: card_view.cpp  cards.cpp  debug_view.cpp  effector.cpp  keypads.cpp  navbar.cpp  ticker.cpp  widgets.hpp
